flickering fix

--- a/src/styles/_resets.scss
+++ b/src/styles/_resets.scss
@@ -21,6 +21,10 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 ul {
   list-style: none;
 }
